ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rbac-ns
  labels:
    environment: test
    owner: sandeepreddy
