cas_bpm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: casbpmpod
  labels:
    app: casbpm
spec:
  containers:
  - name: cas
    image: sandeepfile/tomcat-cas:latest
    ports:
    - containerPort: 9030
  - name: bpm
    image: sandeepfile/bpm:latest
    ports:
    - containerPort: 8280
---
apiVersion: v1
kind: Service
metadata:
  name: bpm-svc
spec:
  selector:
    app: casbpm
  type: NodePort
  ports:
  - name: bpm
    port: 8080
    targetPort: 8280
    nodePort: 30004
  - name: cas
    port: 9030
    targetPort: 9030
    nodePort: 30005
