deployments.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deployns
  labels:
    app: cccapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: deployns
  labels:
    app: nginx
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 90
        resources:
          requests:
            memory: 5Gi
            cpu: 1
          limits:
            memory: 8Gi
            cpu: 4   
---
apiVersion: v1
kind: Service
metadata:
  name: nginxsvc
  namespace: deployns
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 90
    nodePort: 30009
