kube-state-metrics.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-state-metrics

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: kube-state-metrics
  labels:
    app.kubernetes.io/name: kube-state-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kube-state-metrics
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kube-state-metrics
    spec:
      serviceAccountName: kube-state-metrics
      containers:
      - name: kube-state-metrics
        image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.13.0
        ports:
        - name: http-metrics
          containerPort: 8282
        args:
          - "--port=8282"

---

apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: kube-state-metrics
  labels:
    app.kubernetes.io/name: kube-state-metrics
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: kube-state-metrics
  ports:
  - name: http-metrics
    port: 8282
    targetPort: 8282
    nodePort: 30787
