liveness_rediness_command.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bpmwithlivereadyprobe
  labels:
    app: liveready
spec:
  imagePullSecrets:
  - name: bpmsecret
  containers:
  - name: livereadyprod
    image: sandeepfile/bpm
    ports:
    - containerPort: 8280
    livenessProbe:
      tcpSocket:
        port: 8280
      initialDelaySeconds: 200
      periodSeconds: 10
      timeoutSeconds: 120
    readinessProbe:
      tcpSocket:
        port: 8280
      initialDelaySeconds: 200
      periodSeconds: 10 
      timeoutSeconds: 120
---
apiVersion: v1
kind: Service
metadata:
 name: livereadysvc
spec:
  type: NodePort
  selector:
    app: liveready
  ports:
  - port: 8280
    nodePort: 30009
