liveness_rediness_http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bpmwithlivereadyprobe
  labels:                   #this lables will not be used any where this are optional
    app: liveready
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: liveready
  template:
    metadata:
      labels:
        app: liveready
    spec:
      imagePullSecrets:
      - name: bpmsecret
      containers:
      - name: livereadyprod
        image: sandeepfile/bpm
        ports:
        - containerPort: 8280
        livenessProbe:
          httpGet:
            path: activiti-app/
            port: 8280
          initialDelaySeconds: 200
          periodSeconds: 10
          timeoutSeconds: 120
        readinessProbe:
          httpGet: 
            path: activiti-app/
            port: 8280
          initialDelaySeconds: 200
          periodSeconds: 10 
          timeoutSeconds: 120
---
apiVersion: v1
kind: Service
metadata:
 name: livereadysvc
spec:
  type: NodePort
  selector:
    app: liveready
  ports:
  - port: 8280
    nodePort: 30009
