ngnix.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cccns
  labels:
    app: cccapp
---
apiVersion: v1
kind: Service
metadata:
  name: nginxsvc
  namespace: cccns
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30008
