resource_quota_Clusterip.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns
  labels:
     team: testing
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mavenrq
  namespace: test-ns
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: maven
  template:
    metadata:
      labels:
        app: maven
    spec:
      containers:
        - name: maven
          image: sandeepfile/maven-web-application:1
          ports:
          - containerPort: 8080
          resources:
            requests:
              cpu: 3
              memory: "1Gi"
            limits:
              cpu: 3
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: mavensvc
  namespace: test-ns
spec:
  type: ClusterIP
  selector:
    app: maven
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30090
