trail.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: appns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: appns
spec:
  replicas: 4
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    minReadySeconds: 30
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 90
        resources:
          requests:
	    memory: "5Gi"
	    cpu: "1"
	  limits:
	    memory: "10Gi"
	    cpu: "4"
---
apiVersion: v1
kind: Service
metadata:
  name: nginxsrv
  namespace: appns
spec:
  type: NodePort
  selector:
     app: nginx
  ports:
  - port: 80
    nodePort: 32080
    targetPort: 90
---
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: nginxHPA
   namespace: appns
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
     name: nginx
   minReplicas: 1
   maxReplicas: 5
   metrics:
   - type: Resource
     resource:
       name: cpu
       target:
         type: Utilization
         averageUtilization: 50
