network_policy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: np
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: npnginx
  namespace: np
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress  
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: nginx
      - ipBlock:
         cidr: 0.0.0.0/0  # Allows traffic from any external source
    ports:
    - protocol: TCP  
      port: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginxnp
  namespace: np
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginxnpsvc
  namespace: np
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
  - port: 80
    nodePort: 31090
